--- a/build.xml
+++ b/build.xml
@@ -16,10 +16,30 @@
             <arg value="-l"/>
         </exec>
     </target>
+
+    <!-- generate config -->
+    <target name="generate-config">
+
+        <!-- ORM -->
+        <loadfile property="db.config" file="${project.basedir}/config/autoload/orm.local.php.dist">
+            <filterchain>
+                <replacetokens>
+                    <token key="host" value="${db.host}"/>
+                    <token key="port" value="${db.port}"/>
+                    <token key="username" value="${db.username}"/>
+                    <token key="password" value="${db.password}"/>
+                    <token key="dbname" value="${db.dbname}"/>
+                </replacetokens>
+            </filterchain>
+        </loadfile>
+        <echo msg="${db.config}" file="./config/autoload/orm.local.php"/>
+
+    </target>
     
     <target name="provision-stack"
             description="Provision a stack on AWS" />
     
     <target name="setup"
-            description="Setup external dependencies and migrate data"/>
+            description="Setup external dependencies and migrate data"
+            depends="generate-config"/>
 </project>
