--- a/config/autoload/orm.local.php.dist
+++ b/config/autoload/orm.local.php.dist
@@ -12,6 +12,14 @@ return [
                     'dbname' => '@dbname@'
                 ]
             ]
+        ],
+        'migrations_configuration' => [
+            'orm_default' => [
+                'directory' => 'data/orm/migrations',
+                'name' => 'Skeleton',
+                'namespace' => 'DoctrineMigrations',
+                'table' => 'doctrine_migration_versions',
+            ]
         ]
     ]
 ];
