--- a/infra/single-server.template
+++ b/infra/single-server.template
@@ -450,10 +450,26 @@
               [
                 "#!/bin/bash -xe\n",
                 "yum install -y aws-cli php56 mysql55-server php56-mysqlnd\n",
+                "/etc/init.d/mysqld start\n",
+                "mkdir -p /var/log/training\n",
                 "mkdir -p /var/www/html/public\n",
                 "chown apache:apache /var/www/html/public\n",
                 "sed -i 's#DocumentRoot \"/var/www/html\"#DocumentRoot \"/var/www/html/public\"#g' /etc/httpd/conf/httpd.conf\n",
+                "echo 'date.timezone=Europe/Paris' >> /etc/php.ini\n",
                 "/etc/init.d/httpd restart\n",
+                "# Setup application dependencies.\n",
+                "mkdir -p /usr/local/etc/skeleton",
+                "\n",
+                "echo 'db.host=localhost' >> /usr/local/etc/skeleton/skeleton.tmp.ini",
+                "\n",
+                "echo 'db.name=training' >> /usr/local/etc/skeleton/skeleton.tmp.ini",
+                "\n",
+                "echo 'db.user=root' >> /usr/local/etc/skeleton/skeleton.tmp.ini",
+                "\n",
+                "echo 'db.password=' >> /usr/local/etc/skeleton/skeleton.tmp.ini",
+                "\n",
+                "mv /usr/local/etc/skeleton/skeleton.tmp.ini /usr/local/etc/skeleton/skeleton.ini",
+                "\n",
                 "# Install the AWS CodeDeploy Agent.\n",
                 "cd /home/ec2-user/\n",
                 "aws s3 cp 's3://aws-codedeploy-us-east-1/latest/codedeploy-agent.noarch.rpm' .\n",
