--- a/behat.yml
+++ b/behat.yml
@@ -6,6 +6,7 @@ default:
       Behat\MinkExtension:
         base_url: http://127.0.0.1
         goutte: ~
-        #selenium2:
-        #  wd_host: http://localhost:4444/wd/hub
+        javascript_session: selenium2
+        selenium2:
+          wd_host: http://localhost:4444/wd/hub
 
