update selenium hostname

--- a/behat.yml
+++ b/behat.yml
@@ -4,9 +4,10 @@
 default:
   extensions:
       Behat\MinkExtension:
-        base_url: http://127.0.0.1
+        base_url: http://application
         goutte: ~
+        browser_name: chrome
         javascript_session: selenium2
         selenium2:
-          wd_host: http://localhost:4444/wd/hub
+          wd_host: http://selenium:4444/wd/hub
 
